logs/demo_orchestrator.log
  File "<string>", line 2
    from /home/stephane/GitHub/PaniniFS-1/Copilotage/agents.continuous_improvement_orchestrator import ContinuousImprovementOrchestrator
         ^
SyntaxError: invalid syntax
